<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlc_executive</name>
  <version>0.0.0</version>
  <description>BehaviorTree-based executive layer for rlc: orchestrates state, planning via MoveIt, and execution.</description>
  <maintainer email="empty@empty.com">empty</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>

  <!-- State -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Planning and execution interfaces -->
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>

  <!-- BT engine -->
  <depend>behaviortree_cpp_v3</depend>

  <!-- YAML config -->
  <depend>yaml_cpp_vendor</depend>

  <!-- External API (msgs/actions) -->
  <depend>rlc_executive_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
