<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rlc_robot_descriptions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="asme.kfupm.website@gmail.com">g201951870</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <!-- Upstream robot description packages are external dependencies -->
  <exec_depend>kortex_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
